--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
-    "@innovaccer/design-system": "^1.4.0-0",
+    "@innovaccer/design-system": "^2.5.0",
     "@storybook/storybook-deployer": "^2.8.7",
     "@storybook/addon-docs": "^6.1.6",
     "@storybook/addon-essentials": "^6.1.5",
