--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
-    "@innovaccer/design-system": "^2.7.0-0",
+    "@innovaccer/design-system": "^2.13.3",
     "@storybook/addon-docs": "^6.1.6",
     "@storybook/addon-essentials": "^6.1.5",
     "@storybook/react": "^6.1.5",
@@ -74,7 +74,7 @@
     "redraft": "^0.10.2"
   },
   "peerDependencies": {
-    "@innovaccer/design-system": "^1.4.0-0",
+    "@innovaccer/design-system": "^2.13.3",
     "react": "0.13.x || 0.14.x || ^15.0.0-0 || 15.x.x || ^16.0.0-0 || ^16.x.x",
     "react-dom": "0.13.x || 0.14.x || ^15.0.0-0 || 15.x.x || ^16.0.0-0 || ^16.x.x"
   },
