--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           CDN_BUCKET: ${{ secrets.CDN_BUCKET }}
-        run: RELEASE_COMMIT=true npm version --no-commit-hooks $(git log -1 --pretty=format:%s) -m "Released %s"
+        run: RELEASE_COMMIT=true npm version --allow-same-version --no-commit-hooks $(git log -1 --pretty=format:%s) -m "Released %s"
 
       - name: gnerate .npmrc
         if: steps.is_release_commit.outputs.result == 1
@@ -54,16 +54,20 @@ jobs:
         if: steps.is_release_commit.outputs.result == 1
         run: git push https://${{ secrets.GH_TOKEN }}@github.com/$GITHUB_REPOSITORY.git $(git log -2 --pretty=format:%B | tail -n1)
 
-      - name: remove dist from commit
-        if: steps.is_release_commit.outputs.result == 1
-        run: |
-          git reset HEAD~1
-          git add package.json
-          git commit -m "Released $(git log -1 --pretty=format:%s)"
+      # Note : not working due to limitation of github actions to push to protected branches.
+      # Error example : remote: error: GH006: Protected branch update failed for refs/heads/docs.
+      # Please add updated version in package.json while adding the release commit itself.
+      
+      # - name: remove dist from commit
+      #   if: steps.is_release_commit.outputs.result == 1
+      #   run: |
+      #     git reset HEAD~1
+      #     git add package.json
+      #     git commit -m "Released $(git log -1 --pretty=format:%s)"
 
-      - name: push version to github
-        if: steps.is_release_commit.outputs.result == 1
-        run: git push https://${{ secrets.GH_TOKEN }}@github.com/$GITHUB_REPOSITORY.git HEAD:master 
+      # - name: push version to github
+      #   if: steps.is_release_commit.outputs.result == 1
+      #   run: git push https://${{ secrets.GH_TOKEN }}@github.com/$GITHUB_REPOSITORY.git HEAD:master 
     
       - name: deploy storybook
         env:
