--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     [
       "@babel/plugin-proposal-class-properties",
       {
-        "loose": true
+        "loose": false
       }
     ]
   ]
