--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
         if: steps.is_release_commit.outputs.result == 1
         run: git checkout -b preparing-module-for-npm-publish && git config --global user.email "release-bot@innovaccer.com" && git config --global user.name "release-bot"
       
+      - name: check git status
+        if: steps.is_release_commit.outputs.result == 1
+        run: git status
+
       - name: bump module version
         if: steps.is_release_commit.outputs.result == 1
         env:
