--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       
       - name: check git status
         if: steps.is_release_commit.outputs.result == 1
-        run: git status
+        run: git status && git add yarn.lock && git commit -m "chore: update yarn.lock"
 
       - name: bump module version
         if: steps.is_release_commit.outputs.result == 1
