--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,15 @@ jobs:
       
       - name: check git status
         if: steps.is_release_commit.outputs.result == 1
-        run: git status && git add yarn.lock && git commit -m "chore: update yarn.lock"
+        run: git status
+
+      - name: stage changes
+        if: steps.is_release_commit.outputs.result == 1
+        run: git add yarn.lock
+
+      - name: commit changes
+        if: steps.is_release_commit.outputs.result == 1
+        run: git commit -m "chore: update yarn.lock"
 
       - name: bump module version
         if: steps.is_release_commit.outputs.result == 1
