--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,8 @@ jobs:
 
       - name: commit changes
         if: steps.is_release_commit.outputs.result == 1
-        run: git commit -m 'chore: update yarn.lock'
+        run: |
+          git commit -m 'chore: update yarn.lock'
 
       - name: bump module version
         if: steps.is_release_commit.outputs.result == 1
