--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,15 @@ jobs:
         if: steps.is_release_commit.outputs.result == 1
         run: git status
 
+      - name: stage changes
+        if: steps.is_release_commit.outputs.result == 1
+        run: git add yarn.lock
+
+      - name: commit changes
+        if: steps.is_release_commit.outputs.result == 1
+        run: |
+          git commit -m $(git log -1 --pretty=format:%s)
+
       - name: bump module version
         if: steps.is_release_commit.outputs.result == 1
         env:
